--- a/index.html
+++ b/index.html
@@ -149,22 +149,22 @@
 <div class="section-title">Screenshots</div>
 <div class="screenshots">
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS1.jpg" alt="Screenshot 1" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/1.jpg" alt="Screenshot 1" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS2.jpg" alt="Screenshot 2" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/2.jpg" alt="Screenshot 2" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS3.jpg" alt="Screenshot 3" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/3.jpg" alt="Screenshot 3" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS4.jpg" alt="Screenshot 4" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/4.jpg" alt="Screenshot 4" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS5.jpg" alt="Screenshot 5" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/5.jpg" alt="Screenshot 5" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
   <div class="screenshot">
-    <img src="img/S5_1290x2796_posterS6.jpg" alt="Screenshot 6" style="width: 100%; height: 100%; border-radius: 16px;">
+    <img src="img/s6/6.jpg" alt="Screenshot 6" style="width: 100%; height: 100%; border-radius: 16px;">
   </div>
 </div>
 
